welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: value c is not a member of object java.awt.Color
  setCouleurBrosse(Color.c)
                         ^